--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,9 @@
 
 /* Global Styles */
 
+html {
+       overflow-y: scroll;
+}
 html,
 body {
     width: 100%;
@@ -82,7 +85,7 @@ hr.small {
     height: 100%;
     margin-right: -250px;
     overflow-y: auto;
-    background: #222;
+    background: rgba(0,0,0,.8);
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
     -ms-transition: all 0.4s ease 0s;
@@ -164,11 +167,15 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
+    background: url(/assets/images/bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+}
+.header h1, .header h3 {
+    color: #fff;
+    text-shadow: 0px 3px 3px #3d3d3d;
 }
 
 /* About */
