--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -16,58 +16,23 @@
                 <h2>Projects - Libraries</h2>
                 <hr class="small">
                 <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="project-item">
-                            <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-steam-square fa-stack-1x text-primary"></i>
-                        </span>
-                            <h4>
-                                <strong>steam-web</strong>
-                            </h4>
-                            <p>Node.js API client for the Steam Web API</p>
-                            <a target= "_new" href="https://github.com/Tidwell/nodeSteam" class="btn btn-light"><i class="fa fa-github"></i> Github</a>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="project-item">
-                            <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-trophy fa-stack-1x text-primary"></i>
-                        </span>
-                            <h4>
-                                <strong>node-challonge</strong>
-                            </h4>
-                            <p>Node.js API client for the challonge API</p>
-                            <a target= "_new" href="https://github.com/Tidwell/node-challonge" class="btn btn-light"><i class="fa fa-github"></i> Github</a>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="project-item">
-                            <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-file-code-o fa-stack-1x text-primary"></i>
-                        </span>
-                            <h4>
-                                <strong>dgeni static generator</strong>
-                            </h4>
-                            <p>Dgeni package for generating static sites from markdown.</p>
-                            <a target= "_new" href="https://github.com/Tidwell/dgeni-static-gen" class="btn btn-light"><i class="fa fa-github"></i> Github</a>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="project-item">
-                            <span class="fa-stack fa-4x">
-                            <i class="fa fa-circle fa-stack-2x"></i>
-                            <i class="fa fa-rocket fa-stack-1x text-primary"></i>
-                        </span>
-                            <h4>
-                                <strong>fwk</strong>
-                            </h4>
-                            <p>Yeoman scaffolding tool for module-based node.js projects.</p>
-                            <a target= "_new" href="https://github.com/Tidwell/generator-fwk" class="btn btn-light"><i class="fa fa-github"></i> Github</a>
-                        </div>
-                    </div>
+                    {{#each portfolioData}}
+                        {{#if this.indexProjectLibrary}}
+                            <div class="col-md-3 col-sm-6">
+                                <div class="project-item">
+                                    <span class="fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa {{this.icon}} fa-stack-1x text-primary"></i>
+                                </span>
+                                    <h4>
+                                        <strong>{{this.name}}</strong>
+                                    </h4>
+                                    <p>{{this.description}}</p>
+                                    <a target= "_new" href="{{this.github}}" class="btn btn-light"><i class="fa fa-github"></i> Github</a>
+                                </div>
+                            </div>
+                        {{/if}}
+                    {{/each}}
                 </div>
                 <!-- /.row (nested) -->
             </div>
@@ -86,34 +51,17 @@
                 <h2>Projects - Sites</h2>
                 <hr class="small">
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <a href="http://www.hearthstone.gg" target="_new">
-                                <img class="img-portfolio img-responsive" src="/assets/images/portfolio-hsgg.jpg">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <a href="http://www.hstrny.com" target="_new">
-                                <img class="img-portfolio img-responsive" src="/assets/images/portfolio-hstrny.jpg">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <a href="http://www.scrollstoolbox.com" target="_new">
-                                <img class="img-portfolio img-responsive" src="/assets/images/portfolio-scrollstoolbox.jpg">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <a href="http://www.faeriadecks.com" target="_new">
-                                <img class="img-portfolio img-responsive" src="/assets/images/portfolio-faeriadecks.jpg">
-                            </a>
-                        </div>
-                    </div>
+                    {{#each portfolioData}}
+                        {{#if this.indexProjectSite}}
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <a href="{{this.url}}" target="_new">
+                                        <img class="img-portfolio img-responsive" src="{{this.image}}">
+                                    </a>
+                                </div>
+                            </div>
+                        {{/if}}
+                    {{/each}}
                 </div>
             </div>
             <!-- /.col-lg-10 -->
@@ -128,7 +76,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h3>More</h3>
+                <h2>More</h2>
+                <hr class="small">
                 <a href="/resume" class="btn btn-lg btn-light">Resume</a>
                 <a href="/portfolio" class="btn btn-lg btn-dark">Full Portfolio</a>
             </div>
