--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -12,6 +12,9 @@
 	<!-- build:css /assets/css/styles.css -->
 	<link rel="stylesheet" type="text/css" href="/assets/bower_components/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/resume.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/portfolio.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/print.css">
 	<!-- endbuild -->
 </head>
 <body>
