--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,15 +1,20 @@
 .portfolio .folio-item {
 	position: relative;
 	font-size: 16px;
-	border: .25em solid #3d3d3d;
+	border: .25em solid rgba(27,24,31,.9);
 	padding: 0;
 	min-height: 20em;
 	margin-bottom: 2em;
 	background: #ddd;
 	padding-bottom: 2em;
+	border-radius: .25em;
+}
+.folio-item:hover,
+.folio-item:focus,
+.folio-item:active {
+	background: #eee;
 }
 .portfolio .folio-item .link-container {
-	background: #ccc;
 	position: absolute;
 	bottom: 0;
 	width: 100%;
@@ -17,14 +22,22 @@
 .portfolio .folio-item a {
 	box-sizing: border-box;
 	display: block;
-	height: 2em;	
+	height: 2em;
 	padding: .25em 1em;
+	width: 100%;
+	background: #ccc;
+}
+.portfolio .folio-item a:hover,
+.portfolio .folio-item a:focus,
+.portfolio .folio-item a:active {
+	background: #fff;
 }
 .portfolio .folio-item img {
 	max-height: 20%
 }
 .portfolio .folio-item .content {
 	padding: 1em 1em 0;
+	text-align: center;
 }
 .portfolio .folio-item hr {
 	margin: .25em 0 .5em;
@@ -37,9 +50,44 @@
 	position: absolute;
 	top: -.25em;
 	right: -.25em;
-	background: #3d3d3d;
+	background: rgba(27,24,31,.9);
 	color: #fff;
-	padding: .25em;
-	box-shadow: 0 2px 2px #3d3d3d;
+	padding: .2em .5em;
+	box-shadow: 0 2px 2px rgba(27,24,31,.9);
 	font-size: .8em;
+}
+.portfolio .row {
+	margin-bottom: 2em;
+}
+
+
+
+.flip {
+  -webkit-perspective: 800;
+  cursor: pointer;
+}
+.flip .card.flipped {
+  -webkit-transform: rotatey(-180deg);
+}
+.flip .card {
+	position: relative;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: 0.5s;
+}
+.flip .card .face {
+  width: 100%;
+  height: 100%;
+	position: relative;
+  -webkit-backface-visibility: hidden ;
+  z-index: 2;
+}
+.flip .card .front {
+  z-index: 1;
+  cursor: pointer;
+}
+.flip .card .back {
+	position: absolute;
+	top: 0;
+  -webkit-transform: rotatey(-180deg);
+  cursor: pointer;
 }
