--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -8,80 +8,81 @@
         <a href="#projects" class="btn btn-dark btn-lg">More</a>
     </div>
 </header>
-
-<section id="projects" class="projects bg-primary">
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-lg-10 col-lg-offset-1">
-                <h2>Projects - Libraries</h2>
-                <hr class="small">
-                <div class="row">
-                    {{#each portfolioData}}
-                        {{#if this.indexProjectLibrary}}
-                            <div class="col-md-3 col-sm-6">
-                                <div class="project-item">
-                                    <span class="fa-stack fa-4x">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa {{this.icon}} fa-stack-1x text-primary"></i>
-                                </span>
-                                    <h4>
-                                        <strong>{{this.name}}</strong>
-                                    </h4>
-                                    <p>{{this.description}}</p>
-                                    <a target= "_new" href="{{this.github}}" class="btn btn-light"><i class="fa fa-github"></i> Github</a>
+<div class="bg-container">
+    <section id="projects" class="projects bg-primary">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2>Projects - Libraries</h2>
+                    <hr class="small">
+                    <div class="row">
+                        {{#each portfolioData}}
+                            {{#if this.indexProjectLibrary}}
+                                <div class="col-md-3 col-sm-6">
+                                    <div class="project-item">
+                                        <span class="fa-stack fa-4x">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa {{this.icon}} fa-stack-1x text-primary"></i>
+                                    </span>
+                                        <h4>
+                                            <strong>{{this.name}}</strong>
+                                        </h4>
+                                        <p>{{this.description}}</p>
+                                        <a target= "_new" href="{{this.github}}" class="btn btn-light"><i class="fa fa-github"></i> Github</a>
+                                    </div>
                                 </div>
-                            </div>
-                        {{/if}}
-                    {{/each}}
+                            {{/if}}
+                        {{/each}}
+                    </div>
+                    <!-- /.row (nested) -->
                 </div>
-                <!-- /.row (nested) -->
+                <!-- /.col-lg-10 -->
             </div>
-            <!-- /.col-lg-10 -->
+            <!-- /.row -->
         </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
+        <!-- /.container -->
+    </section>
 
-<!-- Portfolio -->
-<section id="portfolio" class="portfolio">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 text-center">
-                <h2>Projects - Sites</h2>
-                <hr class="small">
-                <div class="row">
-                    {{#each portfolioData}}
-                        {{#if this.indexProjectSite}}
-                            <div class="col-md-6">
-                                <div class="portfolio-item">
-                                    <a href="{{this.url}}" target="_new">
-                                        <img class="img-portfolio img-responsive" src="{{this.image}}">
-                                    </a>
+    <!-- Portfolio -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>Projects - Sites</h2>
+                    <hr class="small">
+                    <div class="row">
+                        {{#each portfolioData}}
+                            {{#if this.indexProjectSite}}
+                                <div class="col-md-6">
+                                    <div class="portfolio-item">
+                                        <a href="{{this.url}}" target="_new">
+                                            <img class="img-portfolio img-responsive" src="{{this.image}}">
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
-                        {{/if}}
-                    {{/each}}
+                            {{/if}}
+                        {{/each}}
+                    </div>
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <!-- Call to Action -->
+    <aside class="call-to-action bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>More</h2>
+                    <hr class="small">
+                    <a href="/resume" class="btn btn-lg btn-light">Resume</a>
+                    <a href="/portfolio" class="btn btn-lg btn-dark">Full Portfolio</a>
                 </div>
             </div>
-            <!-- /.col-lg-10 -->
         </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
-
-<!-- Call to Action -->
-<aside class="call-to-action bg-primary">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>More</h2>
-                <hr class="small">
-                <a href="/resume" class="btn btn-lg btn-light">Resume</a>
-                <a href="/portfolio" class="btn btn-lg btn-dark">Full Portfolio</a>
-            </div>
-        </div>
-    </div>
-</aside>
+    </aside>
+</div>
 {{> footer }}
