--- a/templates/portfolio.hbs
+++ b/templates/portfolio.hbs
@@ -2,6 +2,11 @@
 <section class="portfolio container" {{doc.metadata.pageAttr}}>
 	<div class="row">
 		<div class="col-lg-10 col-lg-offset-1">
+			{{{doc.fileInfo.content}}}
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-10 col-lg-offset-1">
 			<div class="row">
 				{{#each portfolioData}}
 			    	{{> portfolioitem }}
