--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -5,14 +5,26 @@
 	padding: 0;
 	min-height: 20em;
 	margin-bottom: 2em;
-	background: #ddd;
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f6f8f9+0,d7dee3+51,f5f7f9+100 */
+background: rgb(246,248,249); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(246,248,249,1) 0%, rgba(215,222,227,1) 51%, rgba(245,247,249,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(246,248,249,1) 0%,rgba(215,222,227,1) 51%,rgba(245,247,249,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(246,248,249,1) 0%,rgba(215,222,227,1) 51%,rgba(245,247,249,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f8f9', endColorstr='#f5f7f9',GradientType=0 ); /* IE6-9 */
+
 	padding-bottom: 2em;
 	border-radius: .25em;
 }
 .folio-item:hover,
 .folio-item:focus,
 .folio-item:active {
-	background: #eee;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f6f8f9+0,e7e6f2+51,f5f7f9+100 */
+background: rgb(246,248,249); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(246,248,249,1) 0%, rgba(231,230,242,1) 51%, rgba(245,247,249,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(246,248,249,1) 0%,rgba(231,230,242,1) 51%,rgba(245,247,249,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(246,248,249,1) 0%,rgba(231,230,242,1) 51%,rgba(245,247,249,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f8f9', endColorstr='#f5f7f9',GradientType=0 ); /* IE6-9 */
+
 }
 .portfolio .folio-item .link-container {
 	position: absolute;
@@ -25,25 +37,32 @@
 	height: 2em;
 	padding: .25em 1em;
 	width: 100%;
-	background: #ccc;
+	border-top: .1em solid rgba(27,24,31,.9);
 }
 .portfolio .folio-item a:hover,
 .portfolio .folio-item a:focus,
 .portfolio .folio-item a:active {
-	background: #fff;
+	background: rgba(27,24,31,.9);
+	color: white;
+	text-decoration: none;
+	cursor: pointer;
 }
 .portfolio .folio-item img {
 	max-height: 20%
 }
 .portfolio .folio-item .content {
-	padding: 1em 1em 0;
+	padding: 1.5em 1em 0;
 	text-align: center;
 }
 .portfolio .folio-item hr {
 	margin: .25em 0 .5em;
 }
 .portfolio .folio-item .content p {
-	margin-top: .5em;
+	position: absolute;
+	padding: 0 .25em;
+	left: 0;
+	width: 100%;
+	top: 11.5em;
 }
 .portfolio .tag {
 	display: block;
@@ -59,8 +78,6 @@
 .portfolio .row {
 	margin-bottom: 2em;
 }
-
-
 
 .flip {
   -webkit-perspective: 800;
