--- a/templates/partials/portfolioitem.hbs
+++ b/templates/partials/portfolioitem.hbs
@@ -13,26 +13,19 @@
 				{{/if}}
 				<p>{{this.description}}</p>
 			</div>
-			<div class="link-container">
-				{{#if this.github }}
-					<a target= "_new" href="{{this.github}}">
-						<i class="fa fa-github"></i>
-						Github
-					</a>
-				{{/if}}
-				{{#if this.url}}
-					<a target="_new" href="{{this.url}}">
-						<i class="fa fa-file-o"></i>
-						Site
-					</a>
-				{{/if}}
-			</div>
+			{{> portfoliolinks}}
 		</div>
 		<div class="folio-item face back">
 			<div class="content">
 				<strong>{{this.name}}</strong>
+				<hr />
+				<ul>
+					{{#each this.technology}}
+					<li>{{this}}</li>
+					{{/each}}
+				</ul>
 			</div>
-			<hr />
+			{{> portfoliolinks}}
 		</div>
 	</div>
 </div>	
